Supporting background emulator

--- a/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/es.yml
+++ b/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/es.yml
@@ -8,7 +8,7 @@ main:
 
 example:
   run: |-
-    {{Top}}.loadROM("/roms/.all/SuperTiltBro.neees", "rom");
+    {{Top}}.loadROM("/roms/.all/SuperTiltBro.neees");
   messages:
   - presta atención a la <nube> en el medio
   - la nube es un sprite y el título del juego es parte del fondo
