--- a/src/data/levels/05c_APU/03_Channels/chat/en.yml
+++ b/src/data/levels/05c_APU/03_Channels/chat/en.yml
@@ -1,5 +1,16 @@
 ---
 main:
   messages:
-  - "coming soon! // TODO: Implement 'Background' type in DualLayout"
+  - "coming soon! // TODO: DISABLE INPUT, even gamepad"
+  - "// TODO: first click both starts the music and pauses - race"
+  - leaving should restart the music (preexisting bug; NavBar misses the resume-music event since the Loading screen unmounts the navbar)
+  - prevent emulator from being launched, make it a level flag instead of a hack listener in triple layout
+  responses:
+  - try rom [start]
+
+start:
+  run: |-
+    {{Background}}.loadROM("/roms/.all/SuperTiltBro.neees", "demoRom");
+  messages:
+  - does this work?
   responses: []
