Disabling input in demo emulator, pausing music even if volume is 0

--- a/src/data/levels/05c_APU/03_Channels/chat/en.yml
+++ b/src/data/levels/05c_APU/03_Channels/chat/en.yml
@@ -1,7 +1,7 @@
 ---
 main:
   messages:
-  - "coming soon! // TODO: DISABLE INPUT, even gamepad"
+  - "coming soon!"
   - prevent emulator from being launched, make it a level flag instead of a hack listener in triple layout
   responses:
   - try rom [start]
