Adding readOnly state of APU debugger

--- a/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/en.yml
+++ b/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/en.yml
@@ -7,7 +7,7 @@ main:
   - show me an example [example]
 
 example:
-  run: |-
+  run: |
     {{Top}}.loadROM("/roms/.all/SuperTiltBro.neees");
   messages:
   - take a look at the <cloud> in the middle
