--- a/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/es.yml
+++ b/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/es.yml
@@ -7,7 +7,7 @@ main:
   - muéstrame un ejemplo [example]
 
 example:
-  run: |-
+  run: |
     {{Top}}.loadROM("/roms/.all/SuperTiltBro.neees");
   messages:
   - presta atención a la <nube> en el medio
