--- a/src/data/levels/05c_APU/03_Channels/chat/en.yml
+++ b/src/data/levels/05c_APU/03_Channels/chat/en.yml
@@ -1,12 +1,16 @@
 ---
 main:
+  # run: |
+  #   {{Right}}.do((debuggerGUI) => {
+  #     debuggerGUI.selectedTab = "APU";
+  #   });
   messages:
   - "coming soon!"
   responses:
   - try rom [start]
 
 start:
-  run: |-
+  run: |
     {{Background}}.loadROM("/roms/.all/SuperTiltBro.neees", "demoRom");
   messages:
   - does this work?
