Fixing definitions of Pulse Wave and Square Wave

--- a/src/data/levels/01_Getting started/03_Architecture/chat/en.yml
+++ b/src/data/levels/01_Getting started/03_Architecture/chat/en.yml
@@ -63,7 +63,7 @@ apu:
   messages:
   - it's the <Audio Processing Unit>
   - handles sound, producing audio waves
-  - like square waves, triangle waves, noise, and even custom samples!
+  - like pulse waves, triangle waves, noise, and even custom samples!
   - it outputs a stream of 44100 samples per second
   responses:
   - ...main
