Finishing Channels level

--- a/src/data/levels/05c_APU/02_Making some noise/chat/en.yml
+++ b/src/data/levels/05c_APU/02_Making some noise/chat/en.yml
@@ -32,7 +32,7 @@ done:
   - but we'll get there!
   - let's code an <example wave>
   responses:
-  - like a square wave? [wave]
+  - like a square wave? ⏹️ [wave]
 
 wave:
   run: |
