--- a/src/data/levels/05c_APU/02_Making some noise/chat/es.yml
+++ b/src/data/levels/05c_APU/02_Making some noise/chat/es.yml
@@ -32,7 +32,7 @@ done:
   - ¡pero ya llegaremos!
   - vamos a programar una <onda de ejemplo>
   responses:
-  - ¿como una onda cuadrada? [wave]
+  - ¿como una onda cuadrada? ⏹️ [wave]
 
 wave:
   run: |
