Adding id to APUInMemoryRegister and preparing audio registers level

--- a/src/data/levels/05b_PPU/06_Video Registers/chat/en.yml
+++ b/src/data/levels/05b_PPU/06_Video Registers/chat/en.yml
@@ -27,7 +27,7 @@ example:
 numbers:
   messages: 
   - yes, but some produce <special effects> when the 🧠  CPU reads or writes them
-  - these side effects can reset an internal buffer, increment counters, or even copying data!
+  - these side effects can reset an internal buffer, increment counters, or even copy data!
   - "I've coded a class that will help you implement this, you should use it 📖"
   - 📄  ~/lib/InMemoryRegister.js~
   responses:
