--- a/.editorconfig
+++ b/.editorconfig
@@ -18,6 +18,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.md]
+indent_style = space
 trim_trailing_whitespace = false
 
 [package.json]
