--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,15 @@
 {
 	"printWidth": 80,
 	"useTabs": true,
+	"overrides": [
+		{
+			"files": ["*.md"],
+			"options": {
+				"useTabs": false,
+				"tabWidth": 2
+			}
+		}
+	],
 	"arrowParens": "always",
 	"importOrder": [
 		"^react$",
