--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "eslint-linter-browserify": "^9.13.0",
     "eventemitter3": "^4.0.7",
     "globals": "^15.12.0",
+    "highlight.js": "^11.11.1",
     "history": "^4.10.1",
     "javascript-time-ago": "^2.5.11",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
-    "marked": "^4.2.3",
+    "marked": "^16.0.0",
+    "marked-highlight": "^2.2.2",
     "mixpanel-browser": "^2.45.0",
     "nes-emu": "^1.0.15",
     "path-browserify-esm": "^1.0.6",
