Simplifying VideoRegisters level and make it use InMemoryRegister.en.md

--- a/.prettierignore
+++ b/.prettierignore
@@ -2,3 +2,7 @@ build/
 package.json
 *.yml
 **/bin/*.js
+src/data/levels/05b_PPU/06_Video Registers/bin/InMemoryRegister.en.md
+src/data/levels/05b_PPU/06_Video Registers/bin/InMemoryRegister.es.md
+src/data/levels/05c_APU/04_Audio Registers/bin/InMemoryRegister.en.md
+src/data/levels/05c_APU/04_Audio Registers/bin/InMemoryRegister.es.md
