--- a/src/data/levels/05b_PPU/06_Video Registers/chat/en.yml
+++ b/src/data/levels/05b_PPU/06_Video Registers/chat/en.yml
@@ -29,7 +29,6 @@ numbers:
   - yes, but some produce <special effects> when the 🧠  CPU reads or writes them
   - these side effects can reset an internal buffer, increment counters, or even copy data!
   - "I've coded a class that will help you implement this, you should use it 📖"
-  - 📄  ~/lib/InMemoryRegister.js~
   responses:
   - how can I use it? [useit]
 
@@ -37,11 +36,11 @@ useit:
   run: |
     set((m) => m.$exercise = true);
   messages:
-  - have a look at 📄  ~/tmpl/ppu/VideoRegisters.js~ and use it as a template
+  - read the docs at 📄  ~/docs/lib/InMemoryRegister.en.md~
+  - and use 📄  ~/tmpl/ppu/VideoRegisters.js~ as a template for the video registers file
   - registers 🎛️  `PPUCtrl` and 📊  `PPUStatus` are already implemented
-  - note how they call `addField(...)` for each parameter defined in the ~Bits~ column of the doc file, indicating the starting bit, and its size (when they're larger than 1 bit)
-  - "this creates <magic properties>: after the `onWrite(...)` call, the PPU will be able to access their values (e.g. ```javascript ppuCtrl.spriteSize```)"
-  - in the case of 📊  `PPUStatus`, it uses `addWritableField(...)` because the PPU needs to write them (e.g. ```javascript ppuStatus.isInVBlankInterval = 1```) so the CPU can read the updated values via `onRead()`
+  - note how they call `addField(...)` for each bit defined in the ~Bits~ column
+  - "this creates <automatic properties>: after a write, the PPU can access their values (e.g. ```javascript ppuCtrl.spriteSize```)"
   - 📚  create a `VideoRegisters` class, using that template
   - |-
     📚  add a `registers` property to 🖥️  `PPU`, assigned to:
