--- a/src/data/levels/05b_PPU/06_Video Registers/chat/en.yml
+++ b/src/data/levels/05b_PPU/06_Video Registers/chat/en.yml
@@ -2,7 +2,7 @@
 main:
   messages:
   - the 🧠  CPU and 🖥️  PPU talk with each other via a set of 9 memory-mapped registers
-  - they live in CPU addresses $2000-$2007 and $4014
+  - they live at CPU addresses $2000-$2007 and $4014
   - check out 📄  ~/docs/ppu/video_registers.en.md~
   - some of them are 🔍  <read-only> (read by 🧠  CPU, written by 🖥️  PPU) 
   - some are ✏️  <write-only> (read by 🖥️  PPU, written by 🧠  CPU)
@@ -14,7 +14,7 @@ main:
 example:
   messages:
   - there are two 🕊️ 📖  pattern tables, remember?
-  - well, a game's code need to tell the PPU which one it should use
+  - well, the game's code needs to tell the 🖥️  PPU which one it should use
   - for backgrounds, this is handled by bit 4 of $2000 (🎛️  PPUCtrl)
   - we call it ~B~ in our ~Bits~ column
   - so, for example, if a game wants to use the second table, it would write a 16 (binary ```raw 000```~1~```raw 0000```) to $2000
@@ -26,7 +26,7 @@ example:
 
 numbers:
   messages: 
-  - yes, but some produce <special effects> when the 🧠  CPU reads or writes them
+  - yes, but some produce <special effects> when the 🧠  CPU reads or writes to them
   - these side effects can reset an internal buffer, increment counters, or even copy data!
   - "I've coded a class that will help you implement this, you should use it 📖"
   responses:
