Updating Audio Registers example so they use Pulse1Control and alter several options at the same time

--- a/src/data/levels/02_Assembly/05_Branching/chat/es.yml
+++ b/src/data/levels/02_Assembly/05_Branching/chat/es.yml
@@ -103,7 +103,7 @@ testing:
   messages:
   - configuré un <generador de números aleatorios> 🔢
   - cada vez que cambies/corras tu código, escribirá un 7 o un byte aleatorio en $4080
-  - con 50% de probabilidades cada cosa
+  - con ~50%~ de probabilidades cada cosa
   - así que cuando sea 7, tu código debería escribir $EE
   - y cuando no, $AA tendría que ser escrito
   responses:
