--- a/src/data/levels/05c_APU/02_Making some noise/chat/en.yml
+++ b/src/data/levels/05c_APU/02_Making some noise/chat/en.yml
@@ -43,6 +43,7 @@ wave:
     📚  <before> that `onSample(...)` call, add:
       ```javascript
       // <test>
+      this.time = (this.time || 0) + 1 / 44100;
       const frequency = 440;
       const period = 1 / frequency;
       const dutyCycle = 0.5;
