--- a/src/data/levels/05c_APU/02_Making some noise/chat/es.yml
+++ b/src/data/levels/05c_APU/02_Making some noise/chat/es.yml
@@ -42,10 +42,13 @@ wave:
   - |-
     📚  <antes> de esa llamada a `onSample(...)`, agrega:
       ```javascript
+      // <test>
+      this.time = (this.time || 0) + 1 / 44100;
       const frequency = 440;
       const period = 1 / frequency;
       const dutyCycle = 0.5;
-      this.sample = (this.time % period) < period * dutyCycle ? 1 : 0;```
+      this.sample = (this.time % period) < period * dutyCycle ? 1 : 0;
+      // </test>```
   - ¡pruébalo! al cargar una ROM, deberías escuchar una onda cuadrada tocando una nota <A4> (~440~ Hz) 🎵
   responses:
   - ¿qué es el ciclo de trabajo? [duty]
