--- a/src/data/levels/05b_PPU/01_New PPU/chat/en.yml
+++ b/src/data/levels/05b_PPU/01_New PPU/chat/en.yml
@@ -61,7 +61,7 @@ next:
   run: |
     set((m) => m.$exercise = true);
   messages:
-  - 📚  create a file for the PPU code, using 📄  ~/tmpl/ppu/PPU.js~ as template
+  - 📚  create a file for the PPU code, using 📄  ~/tmpl/ppu/PPU.js~ as a template
   - |-
     📚  to keep track of the timing, add this method:
     **step()**:
