--- a/src/data/levels/05b_PPU/04_PPU Memory/chat/en.yml
+++ b/src/data/levels/05b_PPU/04_PPU Memory/chat/en.yml
@@ -19,7 +19,7 @@ howso:
 
 emulate:
   messages:
-  - 📚  create a 🐏  `PPUMemory` class, using 📄  ~/tmpl/ppu/PPUMemory.js~ as template
+  - 📚  create a 🐏  `PPUMemory` class, using 📄  ~/tmpl/ppu/PPUMemory.js~ as a template
   - 📚  implement just the first range ($0000-$1FFF), for both `read(...)` and `write(...)` operations
   - on <reads>, you should return ```javascript this.mapper.ppuRead(address)```
   - on <writes>, you should call ```javascript this.mapper.ppuWrite(address, value)``` and return
