--- a/src/data/levels/05a_CPU/01_New CPU/chat/en.yml
+++ b/src/data/levels/05a_CPU/01_New CPU/chat/en.yml
@@ -3,7 +3,7 @@ main:
   messages:
   - we'll now start coding the CPU, the console's <brain> 🧠
   - at this point, you already have an idea of how it works
-  - 📚  create a file for the CPU code, using 📄  ~/tmpl/cpu/CPU.js~ as template
+  - 📚  create a file for the CPU code, using 📄  ~/tmpl/cpu/CPU.js~ as a template
   - 📚  then, import that file from 📄  ~/code/index.js~
   - 📚  and add the corresponding `CPU` key to the exported object
   responses: []
