--- a/src/data/levels/05c_APU/06_Pulse Channels 2-5 - Producing pulse waves/chat/en.yml
+++ b/src/data/levels/05c_APU/06_Pulse Channels 2-5 - Producing pulse waves/chat/en.yml
@@ -1,5 +1,25 @@
 ---
 main:
   messages:
-  - coming soon!
+  - so far, we created some test pulse waves
+  - and now we also know what note we should play
+  - it's time to connect both things and implement the Pulse Channels!
+  responses:
+  - sounds good 👍 [good]
+
+good:
+  messages:
+  - I've abstracted the pulse wave generation logic in 📄  ~/lib/apu/PulseOscillator.js~
+  - 📚  in 🟦  `PulseChannel`, import that class and add an `oscillator` property with a new instance
+  - |-
+    📚  implement this method:
+    **sample()**:
+      **->** sets ```javascript this.oscillator.frequency``` with the right frequency, based on ```javascript this.timer```
+        remember the formula: ```javascript f = 1789773 / (16 * (t + 1))```
+      **->** sets ```javascript this.oscillator.dutyCycle``` with the `dutyCycleId` from 🟦  `PulseControl`
+      **->** sets ```javascript this.oscillator.volume``` with the `volumeOrEnvelopePeriod` from 🟦  `PulseControl`
+      **->** returns ```javascript this.oscillator.sample()```
+  - try out some games!
+  - it won't sound <great> since the channels are never silenced and there's lots of missing stuff 😅
+  - but you'll start hearing part of the games' melodies
   responses: []
