--- a/src/data/levels/05c_APU/08_Pulse Channels 3-5 - Length counter/chat/en.yml
+++ b/src/data/levels/05c_APU/08_Pulse Channels 3-5 - Length counter/chat/en.yml
@@ -1,7 +1,7 @@
 ---
 main:
   messages:
-  - Pulse Channels can be silenced in two situations
+  - "Pulse Channels can be silenced in two situations:"
   - 🔇  when games mute the channel with a 🎛️  APUControl write
   - 📏  when the length counter is 0
   responses:
@@ -13,4 +13,34 @@ length:
   - games <load> its initial value to indicate the note length
   - then that value is decreased every half frame
   - and when it reaches 0, the channel is muted! 🤐
+  responses:
+  - (k) how would a game load its value? [load]
+  - (k) does it always decrement its value on half frames? [decrement]
+  - (l) let's code it [exercise]
+
+load:
+  messages:
+  - it writes to a register that has <Length Counter Load> (or it's abbreviated form, <LCL>) in its name
+  - in the case of the Pulse Channels, it's 🕛  PulseTimerHighLCL, where the high 5 bits are the <length index>
+  - that index points to a fixed table with all the available lengths, check out 📄  ~/lib/apu/noteLengths.js~
+  responses:
+  - what if a game needs a length that isn't in the list? [otherlengths]
+
+otherlengths:
+  messages:
+  - that's not possible!
+  - at least with this type of length counters
+  responses:
+  - ...length
+
+decrement:
+  messages:
+  - only if its <halt flag> is not set
+  - that would be the <L> bit in 🟦  PulseControl
+  responses:
+  - ...length
+
+exercise:
+  messages:
+  - coming soon!
   responses: []
